# LuminaKraftLauncher

./: .env.example  .eslintrc.cjs  .gitignore  .watchignore  AUTOMATED_RELEASE_SETUP.md  AUTOMATIC_UPDATES_SUMMARY.md  CACHE_FIX_GUIDE.md  CHANGELOG.md  CHANGELOG_API_UPDATE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYING.md  CROSS_COMPILATION_GUIDE.md  DEVELOPMENT_GUIDE.md  DISCORD_OAUTH_SETUP.md  Dockerfile.linux-builder  Dockerfile.windows-builder  HYBRID_SOLUTION.md  LAUNCHER_API_UPDATER_REQUIREMENTS.md  QUICK_START_HYBRID.md  README.es.md  README.md  RELEASE_COMMANDS.md  SUPABASE_MIGRATION.md  TESTING_GUIDE.md  TROUBLESHOOTING.md  UPDATE_FEATURE_SUMMARY.md  build-windows.sh  dev-simple.ps1  dev-stable.ps1  download-nsis-deps.js  eslint.config.js  github-token.example.txt  index.html  kill-port.js  known-errors.json  latest.json  package-lock.json  package.json  prerelease-latest.json  (+5 more)
.github/workflows/: build-and-release.yml  deploy.yml  generate-troubleshooting.yml  push-to-public.yml  release-public.yml  release.yml  test-release-fast.yml  test-release.yml
docker/: Dockerfile.linux-builder  Dockerfile.windows-builder
docs/: AUTO_UPDATE_SETUP.md  BUILD_SUCCESS_SUMMARY.md  CACHE_FIX_GUIDE.md  CROSS_COMPILATION_GUIDE.md  CROSS_COMPILATION_SOLUTION.md  CROSS_COMPILATION_WORKFLOW.md  LYCERIS_INTEGRATION_SUMMARY.md  MEMORY_OPTIMIZATION_GUIDE.md  README.md  RELEASE_SETUP.md  RELEASE_WORKFLOW.md  TESTING_GUIDE.md  TROUBLESHOOTING.es.md  WINDOWS_BUILD_SUCCESS.md
public/: auth-success.html
public/locales/en/: common.json
public/locales/es/: common.json
scripts/: README.md  auto-release.js  build-all.sh  build-linux.sh  build-macos.sh  build-windows.sh  check-linux-deps.js  check-modpack-urls.sh  clean-artifacts.sh  clean-docker.sh  clean-duplicates.sh  download-nsis-deps.js  fix-msi-version.js  generate-prerelease-manifest.cjs  generate-release-description.cjs  generate-troubleshooting.js  manage_tasks.ps1  manage_tasks.sh  post-build-macos.sh  release-pre.js  release-version.js  release.js  setup-hybrid-simple.ps1  setup-hybrid.ps1  setup-hybrid.sh  sign-update.cjs  sign-update.js  tasks.txt  tauri-build.js  update-manifest.cjs
src/: App.css  App.tsx  main.tsx
src-tauri/: .taurignore  Cargo.lock.original  Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: curseforge.rs  downloader.rs  filesystem.rs  launcher.rs  main.rs  meta.rs  minecraft.rs  oauth.rs  parallel_download.rs  shared.rs
src-tauri/src/modpack/: extraction.rs  integrity.rs  mod.rs
src-tauri/src/modpack/curseforge/: downloader.rs  manifest.rs  mod.rs  processor.rs  types.rs
src-tauri/src/modpack/modrinth/: downloader.rs  manifest.rs  mod.rs  processor.rs  types.rs
src-tauri/src/utils/: cleanup.rs  downloader.rs  mod.rs
src/components/: ConfirmDialog.tsx  FailedModsDialog.tsx  KnownErrorModal.tsx  PlayerHeadLoader.tsx  RateLimitDialog.tsx  TauriWarning.tsx  UnknownErrorModal.tsx  UpdateDialog.tsx  UsernameRequiredDialog.tsx
src/components/About/: AboutPage.tsx
src/components/Home/: HomePage.tsx
src/contexts/: AnimationContext.tsx  LauncherContext.tsx  ToastContext.tsx
src/hooks/: useModpackValidation.ts
src/i18n/: index.ts
src/services/: IntegrityError.ts  authService.ts  curseforgeService.ts  launcherService.cache.test.ts  launcherService.ts  modpackManagementService.ts  modpackValidationService.ts  modrinthService.ts  r2UploadService.ts  supabaseClient.ts  updateService.ts
src/test/: setup.ts
src/types/: curseforge.ts  launcher.ts  modrinth.ts  supabase.ts
src/utils/: formatBytes.ts  formatNumber.ts  formatPlayTime.ts  index.ts  knownErrors.ts
src/workers/: modpackValidationWorker.ts
(+37 files in other folders)
