[package]
name = "luminakraft-launcher"
version = "0.0.8-alpha.3"
description = "LuminaKraft Studios Official Modpack Launcher"
authors = ["LuminaKraft Studios"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

# Using the same versions as lyceris to avoid conflicts
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["full"] }
reqwest = { version = "0.12.9", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures = "0.3.31"

anyhow = "1.0"
dirs = "6.0"
chrono = { version = "0.4", features = ["serde"] }
lyceris = "1.1.3"
zip = "2.1"
md5 = "0.7"

[features]
# No features here, they're now in the tauri dependency
default = []
macos-no-sign = []

