[package]
name = "luminakraft-launcher"
version = "0.1.7"
description = "LuminaKraft Studios Official Modpack Launcher"
authors = ["LuminaKraft Studios"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [
  # Enable both display backends on Linux via WRY/TAO defaults
  # (Tauri forwards appropriate features to support Wayland/X11)
] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-http = "2"
once_cell = "1.19"

# Using the same versions as lyceris to avoid conflicts
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["full"] }
reqwest = { version = "0.12.9", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures = "0.3.31"

anyhow = "1.0"
dirs = "6.0"
chrono = { version = "0.4", features = ["serde"] }
lyceris = "1.1.3"
zip = "2.1"
md5 = "0.7"
base64 = "0.22"
tiny_http = "0.12"
portpicker = "0.1"
sysinfo = "0.32"
sha2 = "0.10"
sha1 = "0.10"
hmac = "0.12"
hex = "0.4"
rayon = "1.10.0"
walkdir = "2.5.0"

[features]
# No features here, they're now in the tauri dependency
default = []
macos-no-sign = []

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

